fix: footer height and stories wrap

--- a/travel/css/media-390.css
+++ b/travel/css/media-390.css
@@ -245,6 +245,7 @@
     .wrapper-footer {
         background: url(../assets/img/mobile/stories_small.jpg);
         background-position-y: bottom;
+        padding-bottom: 18px;
     }
 
     .contacts {
